<resources>
    <string name="app_name">Pokemón PC</string>
    <string name="inicioSesion">Iniciar Sesión</string>"
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="inicioDeSesion">Inicio de Sesión</string>
    <string name="olvidar">Has olvidado la contraseña?</string>
    <string name="registrate">Registrate</string>
    <string name="nocuenta">No tienes una cuenta?</string>
    <string name="registro">Registro</string>
    <string name="registrar">Registrar</string>
    <string name="contacto">Contacto</string>
    <string name="llamar">Llama al 968 30 62 43</string>
    <string name="enviaremail">pokemonbank@gmail.com</string>
    <string name="ubicacion">C/ Carlos III, 3 Cartagena</string>
    <string name="wasap">Mensaje al 968 30 62 43</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">Usuario</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
</resources>